--- a/openvpn/environment.tmpl
+++ b/openvpn/environment.tmpl
@@ -25,7 +25,7 @@ export TRANSMISSION_INCOMPLETE_DIR={{ default .Env.TRANSMISSION_INCOMPLETE_DIR "
 export TRANSMISSION_INCOMPLETE_DIR_ENABLED={{ default .Env.TRANSMISSION_INCOMPLETE_DIR_ENABLED "true" }}
 export TRANSMISSION_LPD_ENABLED={{ default .Env.TRANSMISSION_LPD_ENABLED "false" }}
 export TRANSMISSION_MAX_PEERS_GLOBAL={{ default .Env.TRANSMISSION_MAX_PEERS_GLOBAL "200" }}
-export TRANSMISSION_MESSAGE_LEVEL={{ default .Env.TRANSMISSION_MESSAGE_LEVEL "2" }}
+export TRANSMISSION_MESSAGE_LEVEL={{ default .Env.TRANSMISSION_MESSAGE_LEVEL "3" }}
 export TRANSMISSION_PEER_CONGESTION_ALGORITHM={{ default .Env.TRANSMISSION_PEER_CONGESTION_ALGORITHM "" }}
 export TRANSMISSION_PEER_ID_TTL_HOURS={{ default .Env.TRANSMISSION_PEER_ID_TTL_HOURS "6" }}
 export TRANSMISSION_PEER_LIMIT_GLOBAL={{ default .Env.TRANSMISSION_PEER_LIMIT_GLOBAL "200" }}
@@ -33,7 +33,7 @@ export TRANSMISSION_PEER_LIMIT_PER_TORRENT={{ default .Env.TRANSMISSION_PEER_LIM
 export TRANSMISSION_PEER_PORT={{ default .Env.TRANSMISSION_PEER_PORT "51413" }}
 export TRANSMISSION_PEER_PORT_RANDOM_HIGH={{ default .Env.TRANSMISSION_PEER_PORT_RANDOM_HIGH "65535" }}
 export TRANSMISSION_PEER_PORT_RANDOM_LOW={{ default .Env.TRANSMISSION_PEER_PORT_RANDOM_LOW "49152" }}
-export TRANSMISSION_PEER_PORT_RANDOM_ON_START={{ default .Env.TRANSMISSION_PEER_PORT_RANDOM_ON_START "false" }}
+export TRANSMISSION_PEER_PORT_RANDOM_ON_START={{ default .Env.TRANSMISSION_PEER_PORT_RANDOM_ON_START "true" }}
 export TRANSMISSION_PEER_SOCKET_TOS={{ default .Env.TRANSMISSION_PEER_SOCKET_TOS "default" }}
 export TRANSMISSION_PEX_ENABLED={{ default .Env.TRANSMISSION_PEX_ENABLED "true" }}
 export TRANSMISSION_PORT_FORWARDING_ENABLED={{ default .Env.TRANSMISSION_PORT_FORWARDING_ENABLED "false" }}
