--- a/openvpn/environment.tmpl
+++ b/openvpn/environment.tmpl
@@ -13,7 +13,7 @@ export TRANSMISSION_BLOCKLIST_ENABLED={{ default .Env.TRANSMISSION_BLOCKLIST_ENA
 export TRANSMISSION_BLOCKLIST_URL={{ default .Env.TRANSMISSION_BLOCKLIST_URL "http://www.example.com/blocklist" }}
 export TRANSMISSION_CACHE_SIZE_MB={{ default .Env.TRANSMISSION_CACHE_SIZE_MB "4" }}
 export TRANSMISSION_DHT_ENABLED={{ default .Env.TRANSMISSION_DHT_ENABLED "true" }}
-export TRANSMISSION_DOWNLOAD_DIR={{ default .Env.TRANSMISSION_DOWNLOAD_DIR "/data/completed" }}
+export TRANSMISSION_DOWNLOAD_DIR={{ default .Env.TRANSMISSION_DOWNLOAD_DIR "/download/completed" }}
 export TRANSMISSION_DOWNLOAD_LIMIT={{ default .Env.TRANSMISSION_DOWNLOAD_LIMIT "100" }}
 export TRANSMISSION_DOWNLOAD_LIMIT_ENABLED={{ default .Env.TRANSMISSION_DOWNLOAD_LIMIT_ENABLED "0" }}
 export TRANSMISSION_DOWNLOAD_QUEUE_ENABLED={{ default .Env.TRANSMISSION_DOWNLOAD_QUEUE_ENABLED "true" }}
