--- a/openvpn/environment.tmpl
+++ b/openvpn/environment.tmpl
@@ -13,7 +13,7 @@ export TRANSMISSION_BLOCKLIST_ENABLED={{ default .Env.TRANSMISSION_BLOCKLIST_ENA
 export TRANSMISSION_BLOCKLIST_URL={{ default .Env.TRANSMISSION_BLOCKLIST_URL "http://www.example.com/blocklist" }}
 export TRANSMISSION_CACHE_SIZE_MB={{ default .Env.TRANSMISSION_CACHE_SIZE_MB "4" }}
 export TRANSMISSION_DHT_ENABLED={{ default .Env.TRANSMISSION_DHT_ENABLED "true" }}
-export TRANSMISSION_DOWNLOAD_DIR={{ default .Env.TRANSMISSION_DOWNLOAD_DIR "/download" }}
+export TRANSMISSION_DOWNLOAD_DIR={{ default .Env.TRANSMISSION_DOWNLOAD_DIR "/downloads" }}
 export TRANSMISSION_DOWNLOAD_LIMIT={{ default .Env.TRANSMISSION_DOWNLOAD_LIMIT "100" }}
 export TRANSMISSION_DOWNLOAD_LIMIT_ENABLED={{ default .Env.TRANSMISSION_DOWNLOAD_LIMIT_ENABLED "0" }}
 export TRANSMISSION_DOWNLOAD_QUEUE_ENABLED={{ default .Env.TRANSMISSION_DOWNLOAD_QUEUE_ENABLED "true" }}
@@ -21,7 +21,7 @@ export TRANSMISSION_DOWNLOAD_QUEUE_SIZE={{ default .Env.TRANSMISSION_DOWNLOAD_QU
 export TRANSMISSION_ENCRYPTION={{ default .Env.TRANSMISSION_ENCRYPTION "1" }}
 export TRANSMISSION_IDLE_SEEDING_LIMIT={{ default .Env.TRANSMISSION_IDLE_SEEDING_LIMIT "30" }}
 export TRANSMISSION_IDLE_SEEDING_LIMIT_ENABLED={{ default .Env.TRANSMISSION_IDLE_SEEDING_LIMIT_ENABLED "false" }}
-export TRANSMISSION_INCOMPLETE_DIR={{ default .Env.TRANSMISSION_INCOMPLETE_DIR "/download/_incomplete" }}
+export TRANSMISSION_INCOMPLETE_DIR={{ default .Env.TRANSMISSION_INCOMPLETE_DIR "/downloads/_incomplete" }}
 export TRANSMISSION_INCOMPLETE_DIR_ENABLED={{ default .Env.TRANSMISSION_INCOMPLETE_DIR_ENABLED "true" }}
 export TRANSMISSION_LPD_ENABLED={{ default .Env.TRANSMISSION_LPD_ENABLED "false" }}
 export TRANSMISSION_MAX_PEERS_GLOBAL={{ default .Env.TRANSMISSION_MAX_PEERS_GLOBAL "200" }}
@@ -69,6 +69,6 @@ export TRANSMISSION_UPLOAD_LIMIT={{ default .Env.TRANSMISSION_UPLOAD_LIMIT "100"
 export TRANSMISSION_UPLOAD_LIMIT_ENABLED={{ default .Env.TRANSMISSION_UPLOAD_LIMIT_ENABLED "0" }}
 export TRANSMISSION_UPLOAD_SLOTS_PER_TORRENT={{ default .Env.TRANSMISSION_UPLOAD_SLOTS_PER_TORRENT "14" }}
 export TRANSMISSION_UTP_ENABLED={{ default .Env.TRANSMISSION_UTP_ENABLED "true" }}
-export TRANSMISSION_WATCH_DIR={{ default .Env.TRANSMISSION_WATCH_DIR "/download/_watch" }}
+export TRANSMISSION_WATCH_DIR={{ default .Env.TRANSMISSION_WATCH_DIR "/downloads/_watch" }}
 export TRANSMISSION_WATCH_DIR_ENABLED={{ default .Env.TRANSMISSION_WATCH_DIR_ENABLED "true" }}
 
